# CppPlaygroundInGitHub

./: .gitignore  CMakeLists.txt  Pipfile  README.md  conanfile.py
src/: CMakeLists.txt
src/Hello/: CMakeLists.txt  Hello.cpp  Hello.h
src/main/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  HelloTest.cpp
test_package/: conanfile.py
